--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     tidyr,
     dplyr,
     magrittr,
-    stringr
+    stringr,
+    mirt
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
