--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 Imports: 
     lavaan,
     tibble,
@@ -21,7 +21,8 @@ Imports:
     dplyr,
     magrittr,
     stringr,
-    mirt
+    mirt,
+    semTools
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
